# nutriscore

./: .gitignore  CLAUDE.md  README.md  RETROSPECTIVE.md  TODO.md  UserStoriesTODO.md  pyproject.toml
src/nutriscore/: app_service.py  config.py  main.py  schemas.py
src/nutriscore/domain/: __init__.py  errors.py  events.py  meal.py
src/nutriscore/eventstore/: __init__.py  sqlite.py
src/nutriscore/openfoodfacts/: __init__.py  client.py
src/nutriscore/projections/: __init__.py  models.py  registry.py
tests/: conftest.py  test_api.py  test_config.py  test_domain.py  test_eventstore.py  test_hello.py  test_off_client.py  test_projections.py
