[project]
name = "nutriscore"
version = "0.1.0"
description = "A web app with a single REST endpoint returning hello world"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nutriscore"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
